--- a/musicstream/src/Stylesheets/Player.css
+++ b/musicstream/src/Stylesheets/Player.css
@@ -1,3 +1,12 @@
 [role=slider] {
-    filter: drop-shadow(0px 0px 1px #000);
+    filter: drop-shadow(0px 0px 1px #474747);
+    border: 1px solid #474747 !important;
+}
+
+.rrs__track {
+    background-color: #cccccc !important;
+}
+
+.rrs__range {
+    background-color: #3f50b5 !important;
 }
